# ors_invitation

./: .bumpversion.cfg  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
deploy/: .env.j2  nginx.conf.j2  supervisor.conf.j2
docs/: endpoint.http  openapi.yaml
src/: .bumpversion.cfg  Makefile  main.rs
src/deploy/: nginx.conf.j2
src/models/: db.rs
src/services/: invitation.rs
src/utils/: config.rs  invite_code.rs  mod.rs
src/views/: api.rs  urls.rs
