[package]
name = "ors_invitation"
version = "1.0.14"
authors = ["Hui Tang <duriantang@gmail.com>"]
edition = "2018"

[dependencies]
redis = "0.10.0"

serde = "1.0.91"
serde_json = "1.0.39"

log = "0.4.6"
env_logger = "0.6.1"


dotenv = "0.14.1"

clap = "2.33.0"

num_cpus = "1.10.0"

nickel = "0.11.0"
nickel_cors = "0.3.3"
